# moodle-tracker

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LLM_integration_example.py  PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_stage2_stage7_schema.py  0003_telegram_command_state.py  0004_item_briefs.py  0005_source_account_token_cache.py  0006_normalized_item_completion_state.py  0007_item_completion_override_state.py  0008_artifact_storage_backend.py
docs/: AGENT_ONBOARDING.md
docs/plans/: 2026-04-30-r2-artifact-storage.md
scripts/: backfill_briefs.py  backup_runtime.sh  cleanup_duplicate_s3_file_artifacts.py  migrate_artifacts_to_r2.py  moodle_academic_horizon.py  moodle_tracker_watch.py  probe_moodle.py  restore_runtime.sh
src/uni_tracker/: __init__.py  config.py  db.py  main.py  models.py  schemas.py  worker.py
src/uni_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uni_tracker/api/: routes.py
src/uni_tracker/collectors/: base.py  moodle.py
src/uni_tracker/services/: briefs.py  calendar.py  completion.py  health.py  llm.py  moodle.py  notifications.py  parsing.py  persistence.py  storage.py  sync.py  telegram_bot.py  timeutils.py  tools.py
tests/: test_api_routes.py  test_collectors.py  test_health.py  test_moodle_academic_horizon.py  test_moodle_tracker_watch.py  test_parsing.py  test_persistence_notifications.py  test_storage.py  test_worker.py
