[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-tracker"
version = "0.1.0"
description = "Personal academic operations backend for Moodle-backed university tracking."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2.0",
  "apscheduler>=3.10,<4.0",
  "fastapi>=0.115,<1.0",
  "icalendar>=6.1,<7.0",
  "httpx>=0.28,<1.0",
  "pypdf>=5.4,<6.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "sqlalchemy>=2.0.36,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
uni-tracker-worker = "uni_tracker.worker:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
